--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <button class="play-btn" onclick="document.getElementById('bgm').play()">🎵 Play Our Song</button>
 
   <audio id="bgm" loop>
-    <source src="love.mp3.mp3" type="audio/mpeg">
+    <source src="love.mp3 (1).mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 </body>
